fixed the horizontal scroll, fix the alignment of some imgs and divs on the in the magazine session and added the type button to some buttons.

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -116,5 +116,10 @@
     .border-footer li {
       border-right: 1px solid lightgrey;
     }
+
+    .in-the-mag img {
+      height: 311px;
+      padding-top: 2em;
+    }
   }
 }
